# nuitka-attrs

./: CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: check-dependencies.yml  checks.yml  publish-docs.yml  publish.yml  upgrade-dev-deps.yml
dev-requirements/: flake8.in  flake8.txt  lint.txt  nox.txt  publish.txt  reformat.txt  tests.in  tests.txt  type-checking.in  type-checking.txt
nuitka_attrs/: __init__.py
tests/: __init__.py  test_init.py
