[build-system]
requires = ["flit_core >=3.3,<4,!=3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "nuitka_attrs"
readme = "README.md"
requires-python = ">=3.10.0,<3.12"
license = {file = "LICENSE"}
authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
keywords = ["hikari"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = ["attrs~=21.0", "nuitka~=0.7"]  # "decompyle3~=3.8", "uncompyle6~=3.8"]
dynamic = ["description", "version"]

[project.urls]
homepage = "https://github.com/FasterSpeeding/nuitka_attrs"
repository = "https://github.com/FasterSpeeding/nuitka_attrs"
documentation = "https://github.com/FasterSpeeding/nuitka_attrs/README.md"
changelog = "https://github.com/FasterSpeeding/nuitka_attrs/blob/master/CHANGELOG.md"

[tool.flit.module]
name = "nuitka_attrs"

[tool.black]
line-length     = 120
target-version  = ["py310"]
include         = ".*pyi?$"

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
branch = true
timid = false
source = ["nuitka_attrs"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "^\\s*\\.\\.\\.$",
    "^\\s*@abc.abstractmethod$",
    "^if typing.TYPE_CHECKING:$"
]

[tool.isort]
profile = "black"
force_single_line = true

[tool.pyright]
include = ["nuitka_attrs", "noxfile.py", "tests"]

pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "error"

reportIncompatibleMethodOverride = "warning"    # This relies on ordering for key-word only arguments
                                                # which is more annoying than it's worth
reportUnknownMemberType = "warning"             # This messes with instance checking generic objects
reportUnknownArgumentType = "warning"           # Pretty much the same as reportUnknownMemberType
reportUnknownLambdaType = "warning"
reportImportCycles = "warning"                  # This isn't necessarily an issue if it's type checking only.
reportUnknownVariableType = "warning"           # Lotta false-positives, might fix/change later.

[tool.pytest.ini_options]
testpaths = ["tests"]
required_plugins = []

[tool.mypy]
# some good strict settings
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

# these are used by pyright
warn_unused_ignores = false
warn_redundant_casts = false

# compatibility with pyright
allow_redefinition = true
disable_error_code = ["return-value"]
